<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/text_margin"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/departmentIcon"
                android:layout_marginRight="@dimen/text_margin"
                android:src="@drawable/mech_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mechanical "
                android:id="@+id/departmentTitle"
                android:layout_marginLeft="@dimen/text_margin"
                android:textColor="@color/textColor"
                android:textSize="@dimen/title_size"
                android:fontFamily="@string/bold"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_c"
            android:layout_marginTop="@dimen/text_margin"
            android:id="@+id/departmentDescription"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/text_size"
            android:fontFamily="@string/light"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>