<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.aboutFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:id="@+id/aboutCollageImage"
            android:scaleType="fitXY"
            android:src="@drawable/avatar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_college"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/text_size"
          android:fontFamily="@string/light"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
          android:layout_marginTop="@dimen/text_margin"
            android:padding="@dimen/text_margin">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/label_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Good Facility"
                android:textColor="@color/textColor"
                android:layout_marginLeft="@dimen/text_margin"
                android:fontFamily="@string/regular"
                android:textSize="@dimen/text_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/text_margin">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/label_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Neat and Clean"
                android:textColor="@color/textColor"
                android:layout_marginLeft="@dimen/text_margin"
                android:fontFamily="@string/regular"
                android:textSize="@dimen/text_size"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/text_margin">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/label_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Library"
                android:textColor="@color/textColor"
                android:layout_marginLeft="@dimen/text_margin"
                android:fontFamily="@string/regular"
                android:textSize="@dimen/text_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/text_margin">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/label_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Very Friendly"
                android:textColor="@color/textColor"
                android:layout_marginLeft="@dimen/text_margin"
                android:fontFamily="@string/regular"
                android:textSize="@dimen/text_size"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/text_margin">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/label_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Awesome"
                android:textColor="@color/textColor"
                android:layout_marginLeft="@dimen/text_margin"
                android:fontFamily="@string/regular"
                android:textSize="@dimen/text_size"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="COURSES"
            android:layout_marginTop="36dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/title_size"
            android:fontFamily="@string/bold"/>
        <androidx.viewpager.widget.ViewPager
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/text_margin"
            android:id="@+id/viewPager"
           android:foregroundGravity="center"
            android:overScrollMode="never"
            android:clipToPadding="false"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/text_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contact Details"
                android:layout_marginTop="36dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/titleColor"
                android:textSize="@dimen/title_size"
                android:fontFamily="@string/bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NIT Patna"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:textColor="@color/titleColor"
                android:textSize="@dimen/text_size"
                android:fontFamily="@string/light"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ashok Rajpath , Patna"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:textColor="@color/titleColor"
                android:textSize="@dimen/text_size"
                android:fontFamily="@string/light"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="apnacollege.nitp@gmail.com"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:textColor="@color/titleColor"
                android:textSize="@dimen/text_size"
                android:fontFamily="@string/light"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:id="@+id/mapImage"
                android:src="@drawable/map_coll"/>



        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>